trunk/Archive2/59/199c9a5a4824e4/output
+ clang++ -std=c++11 -O3 -W -Wall -Wconversion -pedantic-errors -pedantic -Werror=uninitialized -pthread main.cpp
main.cpp:13:16: error: read-only variable is not assignable
    cstring[0] = 'p' ;
    ~~~~~~~~~~ ^
1 error generated.
